--- a/inst/rmarkdown/templates/article/resources/template.tex
+++ b/inst/rmarkdown/templates/article/resources/template.tex
@@ -171,7 +171,7 @@ $abstract$
 
 \maketitle % Print the title and abstract box
 
-\tableofcontents % Print the contents section
+%\tableofcontents % Print the contents section
 
 \thispagestyle{empty} % Removes page numbering from the first page
 
